# Fitness-App

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  MacroFactor-20260327180119.xlsx  PROJECT_STATUS.md  QUICKSTART.md  README.md  alembic.ini  build-ios.sh  deploy-local.sh  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  extreme_gym_exercises_no_intensity.csv  fitness-app-watch.service  maintenance.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml
alembic/: env.py
alembic/versions/: 10ada4009d15_add_set_type_and_sub_sets_to_exercise_.py  1ee0785d6870_add_food_submissions_table.py  1f2e3d4c5b6a_add_workout_session_audit_table.py  27ac2eea39cc_add_draft_columns_to_exercise_sets.py  2b4c6d8e0f1a_add_plan_day_number_to_workout_sessions.py  3c47c344335e_add_nutrition_tables.py  3fa836442cfd_add_diet_phases_table.py  5c7a9e1b2d3f_add_exercise_block_id_to_exercise_sets.py  684a8290de3b_add_workout_templates_table.py  77f39af0983d_remove_day_of_week_column.py  7dc59e708258_add_water_entries_table_and_water_goal_.py  826341152d35_add_planned_reps_left_right_to_exercise_.py  a1b2c3d4e5f6_add_body_fat_pct_to_body_weight.py  (+25 more)
app/: __init__.py  config.py  database.py  main.py
frontend/: capacitor.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
ios/: setup-xcode-project.sh
nginx/: container.conf  gymtracker.conf  router.conf
scripts/: BACKUPS.md  backup-db.sh  cleanup_orphaned_sessions.py  dedupe_exercises.py  fix_plan_exercise_ids.py  import_csv_exercises.py  install-backup.sh  mega_update_exercises.py  migrate_sqlite_to_pg.py  onyx-backup.service  onyx-backup.timer  restore-db.sh  seed_all_exercises.py  seed_exercises.py
tests/: conftest.py  test_auth_flows.py  test_body_weight.py  test_community_food.py  test_config.py  test_diet_phase.py  test_exercises.py  test_nutrition.py  test_overload_delta.py  test_plans.py  test_prefill.py  test_prime_machines.py  test_progress.py  test_recipes.py  test_session_audit.py  test_sessions.py  test_settings_sync.py  test_subscription_model.py  test_sync_to_plan.py
(+155 files in other folders)
